objects/Branch1__c.object
<CustomObject>
    <fields>
        <fullName>Branch2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch2</label>
        <referenceTo>Branch2__c</referenceTo>
        <relationshipLabel>Branch1</relationshipLabel>
        <relationshipName>Branch1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <defaultValue>&apos;Ad-11&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewBranch2__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewBranch2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NewEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NewForm__c</fullName>
        <formula>Name +&apos;Text&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewForm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>new123__c</fullName>
        <label>new123</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test123</valueSetName>
        </valueSet>
    </fields>
    <label>Branch1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>new_Branchh_List_owner_2</fullName>
        <columns>NAME</columns>
        <columns>NewEmail__c</columns>
        <columns>NewForm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>new123__c</field>
            <operation>equals</operation>
            <value>B,C,D,E</value>
        </filters>
        <label>new Branchh List owner 2</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>B!-{000}</displayFormat>
        <label>Branch1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch1</pluralLabel>
    <recordTypes>
        <fullName>HelpRecordType</fullName>
        <active>true</active>
        <label>HelpRecordType</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>new_reason__c</fullName>
        <label>new reason</label>
    </sharingReasons>
    <validationRules>
        <fullName>new_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>Branch2__c &lt;&gt;NULL</errorConditionFormula>
        <errorMessage>Hello</errorMessage>
    </validationRules>
</CustomObject>